[package]
name = "cyberia"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cyberia"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["anchor-debug", "idl-build"] }
anchor-spl  = "0.29.0"
spl-token  = "4.0.3"
