[package]
name = "cyberia"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "cyberia"

[features]
idl-build = [
    "anchor-lang/idl-build",
    "anchor-spl/idl-build"
]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
default = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = { version = "^0.31.1", default-features = false, features = ["init-if-needed"] }
anchor-spl  = "0.31.1"
spl-token  = "6.0.0"
